Bug 1630170 - Delete XRWebGLLayer Framebuffer on XRSession presentation end r=kip,jgilbert,daoshengmu

Differential Revision: https://phabricator.services.mozilla.com/D71063

--HG--
extra : moz-landing-system : lando